Implement Auth, HATEOAS, and Filtering features
- Added Basic Auth with Admin/Driver roles.
- Implemented HATEOAS links in API responses.
- Added filtering options for drivers (username, role, score).
- Set up infrastructure for Badges and Achievements.
- Refactored DTOs and updated TripReport schema with points.
- Note: Daily/Weekly leaderboard logic is currently WIP.